--- a/skyfolk/templates/account/password_change.html
+++ b/skyfolk/templates/account/password_change.html
@@ -19,8 +19,39 @@
 <div class="col l12 m12 s12 wrapper-profilex">
 	  <form method="POST" id="form-changepass" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button class="btn btn-info right blue darken-1 btn-password" type="submit" name="action">{% trans "Change Password" %}</button>
+            <div class="row">
+                  <div class="row">
+                      <div class="red-text">{{ form.oldpassword.errors }}</div>
+                    <div class="input-field col s12">
+                      <i class="material-icons prefix">vpn_key</i>
+                      {{ form.oldpassword }}
+                      <label for="id_oldpassword">{% trans "Current Password" %}</label>
+                    </div>
+                  </div>
+            </div>
+          <div class="row">
+                  <div class="row">
+                      <div class="red-text">{{ form.password1.errors }}</div>
+                    <div class="input-field col s12">
+                      <i class="material-icons prefix">vpn_key</i>
+                      {{ form.password1 }}
+                      <label for="id_password1">{% trans "New Password" %}</label>
+                    </div>
+                  </div>
+            </div>
+          <div class="row">
+                  <div class="row">
+                      <div class="red-text">{{ form.password2.errors }}</div>
+                    <div class="input-field col s12">
+                      <i class="material-icons prefix">vpn_key</i>
+                      {{ form.password2 }}
+                      <label for="id_password2">{% trans "New Password (again)" %}</label>
+                    </div>
+                  </div>
+          </div>
+          <div class="row">
+            <button class="btn btn-info right blue darken-1 btn-password" type="submit" name="action">{% trans "Change Password" %}</button>
+          </div>
     </form>
 	</div>
 {% endblock %}
