--- a/skyfolk/static/css/avatar.css
+++ b/skyfolk/static/css/avatar.css
@@ -29,8 +29,6 @@
   height: auto;
   padding: 10px;
   font-size: 1.4em; }
-  .wrapper-p .current-avatar #id_choices li {
-    width: 100%; }
   .wrapper-p .current-avatar img,
   .wrapper-p .current-avatar p {
     margin: 30px auto 0 auto;
@@ -49,6 +47,10 @@
   padding: 10px;
   margin-top: 15%;
   font-size: 1.4em; }
+  .wrapper-p .options-avatar ul > {
+    padding: 10px; }
+    .wrapper-p .options-avatar ul > li {
+      display: inline-block; }
   .wrapper-p .options-avatar input[type="radio"] {
     display: none; }
   .wrapper-p .options-avatar #id_avatar {
@@ -70,35 +72,6 @@
     margin-left: 30px; }
   .wrapper-p .options-avatar label {
     margin-bottom: 20px; }
-  .wrapper-p .options-avatar ul {
-    border-radius: 3px; }
-    .wrapper-p .options-avatar ul li {
-      margin-left: 15px;
-      margin-right: 15px;
-      padding: 5px;
-      display: inline-block; }
-  .wrapper-p .options-avatar input {
-    border: medium none;
-    border-radius: 2px;
-    display: inline-block;
-    height: 36px;
-    line-height: 36px;
-    padding: 0px 2rem;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #1e88e5;
-    background-color: transparent;
-    text-align: center;
-    letter-spacing: 0.5px;
-    transition: all 0.2s ease-out 0s;
-    cursor: pointer;
-    float: right;
-    outline: none; }
-    .wrapper-p .options-avatar input:hover {
-      opacity: 0.8;
-      background-color: #eee; }
-  .wrapper-p .options-avatar input[type="submit"] {
-    float: left; }
 
 .active {
   border: 4px solid #1e88e5;
@@ -113,55 +86,16 @@
 .delete-avatars label {
   margin-bottom: 20px; }
 .delete-avatars ul {
-  border-radius: 3px; }
-  .delete-avatars ul li {
-    padding: 5px; }
-.delete-avatars input {
-  border: medium none;
-  border-radius: 2px;
-  display: inline-block;
-  height: 36px;
-  line-height: 36px;
-  margin-top: 15px;
-  padding: 0px 2rem;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #1e88e5;
-  background-color: transparent;
-  text-align: center;
-  letter-spacing: 0.5px;
-  transition: all 0.2s ease-out 0s;
-  cursor: pointer;
-  float: right;
-  outline: none; }
-  .delete-avatars input:hover {
-    opacity: 0.8;
-    background-color: #eee; }
+  padding: 10px;
+  display: block; }
+  .delete-avatars ul > li {
+    margin-right: 10px;
+    display: inline-block; }
 
 /* IF AVATAR EMPTY */
 #id_avatar {
   overflow: hidden;
-  padding: 7px;
-  /*& input
-   * background-color: transparent
-   * border: medium none
-   * border-radius: 2px
-   * display: inline-block
-   * cursor: pointer
-   * height: 36px
-   * color: $blueskyfolk
-   * line-height: 36px
-   * margin-top: 15px
-   * letter-spacing: .5px
-   * text-align: center
-   * padding: 0 2rem
-   * outline: none
-   * transition: $default-transition
-   * text-transform: uppercase
-   * text-decoration: none
-   *
-   * &:hover
-   *   background-color: $whitewithopacity */ }
+  padding: 7px; }
   #id_avatar::-webkit-file-upload-button {
     visibility: hidden; }
     #id_avatar::-webkit-file-upload-button:before {
