--- a/skyfolk/static/sass/avatar.sass
+++ b/skyfolk/static/sass/avatar.sass
@@ -32,9 +32,6 @@ $whitewithopacity: rgba(255, 255, 255, .8)
     height: auto
     padding: 10px
     font-size: 1.4em
-    & #id_choices
-      & li
-        width: 100%
     & img,
     p
       margin: 30px auto 0 auto
@@ -53,6 +50,10 @@ $whitewithopacity: rgba(255, 255, 255, .8)
     padding: 10px
     margin-top: 15%
     font-size: 1.4em
+    ul >
+      padding: 10px
+      li
+        display: inline-block
     & input[type="radio"]
       display: none
     & #id_avatar
@@ -74,35 +75,6 @@ $whitewithopacity: rgba(255, 255, 255, .8)
       margin-left: 30px
     & label
       margin-bottom: 20px
-    ul
-      border-radius: 3px
-      & li
-        margin-left: 15px
-        margin-right: 15px
-        padding: 5px
-        display: inline-block
-    & input
-      border: medium none
-      border-radius: 2px
-      display: inline-block
-      height: 36px
-      line-height: 36px
-      padding: 0px 2rem
-      text-transform: uppercase
-      text-decoration: none
-      color: $blueskyfolk
-      background-color: transparent
-      text-align: center
-      letter-spacing: 0.5px
-      transition: $default-transition
-      cursor: pointer
-      float: right
-      outline: none
-      &:hover
-        opacity: 0.8
-        background-color: $whitedarkcolor
-    & input[type="submit"]
-      float: left
 
 .active
   border: 4px solid $blueskyfolk
@@ -118,30 +90,11 @@ $whitewithopacity: rgba(255, 255, 255, .8)
   & label
     margin-bottom: 20px
   ul
-    border-radius: 3px
-    & li
-      padding: 5px
-  & input
-    border: medium none
-    border-radius: 2px
-    display: inline-block
-    height: 36px
-    line-height: 36px
-    margin-top: 15px
-    padding: 0px 2rem
-    text-transform: uppercase
-    text-decoration: none
-    color: $blueskyfolk
-    background-color: transparent
-    text-align: center
-    letter-spacing: 0.5px
-    transition: $default-transition
-    cursor: pointer
-    float: right
-    outline: none
-    &:hover
-      opacity: 0.8
-      background-color: $whitedarkcolor
+    padding: 10px
+    display: block
+    > li
+      margin-right: 10px
+      display: inline-block
 
 /* IF AVATAR EMPTY */
 #id_avatar
@@ -156,24 +109,3 @@ $whitewithopacity: rgba(255, 255, 255, .8)
       -webkit-user-select: none
   & label[for="id_avatar"]
     display: none
-
-  /*& input
-    background-color: transparent
-    border: medium none
-    border-radius: 2px
-    display: inline-block
-    cursor: pointer
-    height: 36px
-    color: $blueskyfolk
-    line-height: 36px
-    margin-top: 15px
-    letter-spacing: .5px
-    text-align: center
-    padding: 0 2rem
-    outline: none
-    transition: $default-transition
-    text-transform: uppercase
-    text-decoration: none
-
-    &:hover
-      background-color: $whitewithopacity*/
