--- a/skyfolk/templates/account/account_inactive.html
+++ b/skyfolk/templates/account/account_inactive.html
@@ -4,12 +4,6 @@
 
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 {% block extra-css %}
-    <style>
-        .account-dissable {
-            text-align: center;
-            font-size: 2em;
-        }
-    </style>
 {% endblock %}
 {% block cf-title %}
 <div class="hgroup">
@@ -24,7 +18,12 @@
     <p class="account-dissable">{% trans "Account Inactive" %}</p>
 {% endif %}
 <form action="." method="POST">{% csrf_token %}
-    {{ form.as_p }}
+    {{ form.is_active.errors }}
+    <p>
+      {{ form.is_active }}
+      <label for="id_is_active"></label>
+        <span>{{ form.is_active.help_text|safe }}</span>
+    </p>
     {% if user.is_active %}
         <button class="btn btn-primary" type="submit" name="action">{% trans "Confirm" %}</button>
     {% endif %}
