--- a/skyfolk/templates/account/email.html
+++ b/skyfolk/templates/account/email.html
@@ -34,39 +34,47 @@
     <form action="{% url 'account_email' %}" class="email_list" method="post">
     {% csrf_token %}
     <fieldset class="blockLabels">
-
-      {% for emailaddress in user.emailaddress_set.all %}
-    <div class="ctrlHolder">
-          <label for="email_radio_{{forloop.counter}}" class="{% if emailaddress.primary %}primary_email{%endif%}">
-          <input id="email_radio_{{forloop.counter}}" type="radio" name="email" {% if emailaddress.primary %}checked="checked"{%endif %} value="{{emailaddress.email}}"/>
-        {{ emailaddress.email }}
-        {% if emailaddress.verified %}
-        <span class="verified">{% trans "Verified" %}</span>
-        {% else %}
-        <span class="unverified">{% trans "Unverified" %}</span>
-        {% endif %}
-          {% if emailaddress.primary %}<span class="primary">{% trans "Primary" %}</span>{% endif %}
-    </label>
-    </div>
-      {% endfor %}
-
-    <div class="buttonHolder">
-          <button class="btn secondaryAction" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
-          <button class="btn secondaryAction" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
-          <button class="btn primaryAction" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
-    </div>
-
+        <div class="collection">
+              {% for emailaddress in user.emailaddress_set.all %}
+                <a  class="collection-item black-text">
+                    <input id="email_radio_{{forloop.counter}}" type="radio" name="email" {% if emailaddress.primary %}checked="checked"{%endif %} value="{{emailaddress.email}}"/>
+                    <label for="email_radio_{{forloop.counter}}" class="{% if emailaddress.primary %}primary_email{%endif%}"></label>
+                    {{ emailaddress.email }}
+                    {% if emailaddress.verified %}
+                    <span class="secondary-content verified chip">{% trans "Verified" %}</span>
+                    {% else %}
+                    <span class="secondary-content unverified chip">{% trans "Unverified" %}</span>
+                    {% endif %}
+                      {% if emailaddress.primary %}<span class="secondary-content primary chip">{% trans "Primary" %}</span>{% endif %}
+                </a>
+              {% endfor %}
+        </div>
+        <div class="buttonHolder">
+              <button class="btn blue darken-1 secondaryAction" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
+              <button class="btn blue darken-1 secondaryAction" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
+              <button class="btn blue darken-1 primaryAction" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
+        </div>
     </fieldset>
     </form>
 {% else %}
     <p><strong>{% trans 'Warning:'%}</strong>
         {% trans "You currently do not have any e-mail address set up. You should really add an e-mail address so you can receive notifications, reset your password, etc." %}</p>
     {% endif %}
+    <div class="divider"></div>
         <h2 class="title-email">{% trans "Add E-mail Address" %}</h2>
         <form method="post" action="{% url 'account_email' %}" class="add_email">
             {% csrf_token %}
-            {{ form.as_p}}
-            <button class="waves-effect waves-light btn" name="action_add" type="submit">{% trans "Add E-mail" %}</button>
+            <div class="row">
+                {{ form.email.errors }}
+              <div class="row">
+                <div class="input-field col s12">
+                  <i class="material-icons prefix">email</i>
+                  {{ form.email }}
+                  <label for="id_email">Email</label>
+                </div>
+              </div>
+            </div>
+            <button class="waves-effect waves-light btn blue darken-1" name="action_add" type="submit">{% trans "Add E-mail" %}</button>
         </form>
 {% endblock %}
 
