--- a/skyfolk/templates/account/email_confirm.html
+++ b/skyfolk/templates/account/email_confirm.html
@@ -16,6 +16,9 @@
             padding: 20px;
             border-radius: 10px;
         }
+        button {
+            margin-top: 2.5%;
+        }
         .information-text {
             font-size: 1.3em;
         }
@@ -25,32 +28,6 @@
         .email-info > h1 {
             font-size: 2em;
         }
-        .email-info > p {
-            font-size: 1.3em;
-        }
-        button {
-            border: medium none;
-            border-radius: 2px;
-            display: block;
-            height: 36px;
-            line-height: 36px;
-            padding: 0 2rem;
-            margin-top: 2%;
-            text-transform: uppercase;
-            text-decoration: none;
-            color: #1e88e5;
-            background-color: transparent;
-            text-align: center;
-            letter-spacing: 0.5px;
-            transition: all 0.2s ease-out 0s;
-            cursor: pointer;
-            float: right;
-            outline: none;
-        }
-        button:hover {
-            background-color: #eee;
-                opacity: 0.8;
-        }
     </style>
 {% endblock %}
 {% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
@@ -58,31 +35,33 @@
 {% block barra_navegacion %}{% comment %} No debe aparecer, ya que no estamos registrados aun {% endcomment %}{% endblock %}
 
 {% block content %}
-<div class="col-lg-12 col-sm-12 col-md-12">
-<div class="container">
-<div class="col-lg-12 col-sm-12 col-md-12 hgroup">
-    <h4 class="cn"> Email </h4>
-    <h6 class="ch"> {% trans "Confirm E-mail Address" %} </h6>
-</div>
-<div class="col-lg-12 col-sm-12 col-md-12 email-info">
-{% if confirmation %}
+    <div class="container">
+    <div class="row">
+        <div class="col l12 s12 m12">
+        <div class="col l12 s12 m12 hgroup">
+            <h4 class="cn"> Email </h4>
+            <h6 class="ch"> {% trans "Confirm E-mail Address" %} </h6>
+        </div>
+        <div class="col l12 s12 m12 email-info">
+        {% if confirmation %}
 
-{% user_display confirmation.email_address.user as user_display %}
+        {% user_display confirmation.email_address.user as user_display %}
 
-<p class="information-text">{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{email}}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
+        <p class="information-text">{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{email}}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
+         <div class="row">
+            <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+            {% csrf_token %}
+                <button class="waves-effect waves-light btn right" type="submit">{% trans 'Confirm' %}</button>
+            </form>
+        </div>
+        {% else %}
 
-<form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
-{% csrf_token %}
-    <button type="submit">{% trans 'Confirm' %}</button>
-</form>
+        {% url 'account_email' as email_url %}
 
-{% else %}
-
-{% url 'account_email' as email_url %}
-
-<p class="information-text">{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url}}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
-{% endif %}
-</div>
-</div>
+        <p class="flow-text information-text">{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url}}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
+        {% endif %}
+        </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
