--- a/skyfolk/static/css/amigos.css
+++ b/skyfolk/static/css/amigos.css
@@ -12,6 +12,9 @@ html, body {
   margin-top: 0;
   margin-bottom: 2.5%; }
 
+.container-responsive {
+  margin-top: 1.3%; }
+
 .container .personal-card {
   height: 300px;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4); }
