--- a/skyfolk/static/css/privacidad.css
+++ b/skyfolk/static/css/privacidad.css
@@ -1,2 +1,36 @@
-.wrapper-options{position:relative;margin-top:20px;background-color:#eee;padding:10px;box-shadow:0 1px 5px rgba(0,0,0,0.15);margin-bottom:20px}.wrapper-options h1{text-align:center;font-size:1.7em;padding:5px;font-style:italic;font-weight:600;margin-bottom:20px}.wrapper-options .options{height:auto}.wrapper-options .options ul{position:relative;width:100%;height:auto}.wrapper-options .options li{list-style-type:none;background-color:#fff;padding:10px;display:inline-block;color:#616161;margin-top:10px}.wrapper-options .options li h3{text-align:center;font-size:1.3em;color:#1e88e5}.wrapper-options .options li p{font-size:1.2em;margin-top:10px;font-weight:bold}label[for="id_privacity"]{margin-bottom:10px;display:inline-block;padding:10px}select{font-family:inherit;background-color:transparent;width:100%;padding:5px;color:#1e88e5;border:none;border-bottom:2px solid #eee}
+.wrapper-options {
+  position: relative;
+  margin-top: 20px;
+  background-color: #eee;
+  padding: 10px;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  margin-bottom: 20px; }
+  .wrapper-options h1 {
+    text-align: center;
+    font-size: 1.7em;
+    padding: 5px;
+    font-weight: 600;
+    margin-bottom: 20px; }
+  .wrapper-options .options {
+    height: auto; }
+    .wrapper-options .options ul {
+      position: relative;
+      width: 100%;
+      height: auto; }
+    .wrapper-options .options li {
+      list-style-type: none;
+      background-color: #fff;
+      padding: 10px;
+      display: inline-block;
+      color: #616161;
+      margin-top: 10px; }
+      .wrapper-options .options li h3 {
+        text-align: center;
+        font-size: 1.3em;
+        color: #1e88e5; }
+      .wrapper-options .options li p {
+        font-size: 1.2em;
+        margin-top: 10px;
+        font-weight: bold; }
+
 /*# sourceMappingURL=privacidad.css.map */
