--- a/skyfolk/static/sass/amigos.sass
+++ b/skyfolk/static/sass/amigos.sass
@@ -19,6 +19,8 @@ html, body
   margin-top: 0
   margin-bottom: 2.5%
 
+.container-responsive
+  margin-top: 1.3%
 .container .personal-card
   height: 300px
   box-shadow: 0 1px 5px $transparentgraycolor
