--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -168,6 +168,17 @@
       </table>
   </div>
 {% endif %}
+     <div class="hide-on-large-only fixed-action-btn" style="bottom: 45px; right: 24px;">
+    <a class="btn-floating btn-large blue darken-1  ">
+      <i class="large material-icons">menu</i>
+    </a>
+    <ul>
+      <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+      <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+      <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+      <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+    </ul>
+  </div>
   <script src="{{STATIC_URL}}emoji/js/textarea_find_emoji.js" type="text/javascript"></script>
   </body>
 </html>
