--- a/skyfolk/static/css/core.css
+++ b/skyfolk/static/css/core.css
@@ -313,7 +313,10 @@ body > .container {
 *, *:before, *:after {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
 
 #page-wrapper {
   background: #fff;
