--- a/skyfolk/static/sass/avatar.sass
+++ b/skyfolk/static/sass/avatar.sass
@@ -75,9 +75,9 @@ $whitewithopacity: rgba(255, 255, 255, .8)
       margin-left: 30px
     & label
       margin-bottom: 20px
-
-.active
-  border: 4px solid $blueskyfolk
+.wrapper-p
+  .active
+    border: 4px solid $blueskyfolk
 
   /* DELETE AVATAR */
 .delete-avatars
