--- a/skyfolk/static/sass/core.sass
+++ b/skyfolk/static/sass/core.sass
@@ -332,6 +332,9 @@ body > .container
   -moz-box-sizing: border-box
   -webkit-box-sizing: border-box
   box-sizing: border-box
+  text-rendering: optimizeLegibility
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
 
 #page-wrapper
   background: #fff
