--- a/skyfolk/templates/account/amigos.html
+++ b/skyfolk/templates/account/amigos.html
@@ -1,4 +1,7 @@
 {% extends 'account/base_interface.html' %}
+{% comment %}
+  Template para los seguidos de un perfil
+{% endcomment %}
 {% load app_filters %}
 {% load avatar_tags %}
 {% block title %} <title>Seguidores {{ request.user.username }}</title> {% endblock %}
@@ -14,7 +17,7 @@
     {% for item in friends_top4 %}
     <div class="col l3 m10 s12">
         <div class="personal-card">
-            <div class="col-lg-12">
+            <div class="col s12">
                 <div class="header">
                    {% if item.user__profile__backImage and item.user__profile__backImage|file_exists %}
                        <img class="back-profile-user" src="{{ MEDIA_URL }}{{ item.user__profile__backImage }}">
@@ -28,7 +31,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col l12">
+            <div class="col s12">
                 <div class="name-friend">
                 <a href="/profile/{{ item.user__username }}">@{{ item.user__username }} </a><br><br>
                     <p>{{ item.user__first_name }} {{item.user__last_name}}</p>
@@ -41,10 +44,8 @@
         </div>
     </div>
 </div>
-{% endblock %}
-{% block extra-js %}
     <script src="{{STATIC_URL}}js/friends.js"></script>
-     <script async type="text/javascript" language="javascript">
+<script async type="text/javascript" language="javascript">
          $(function () {
              var $win = $(window);
              $win.scroll(function () {
@@ -54,5 +55,6 @@
                  }
              });
          });
-    </script>
+</script>
 {% endblock %}
+
