--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -173,10 +173,11 @@
       <i class="large material-icons">menu</i>
     </a>
     <ul>
-      <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
-      <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-      <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-      <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+      <li><a href="/inicio" class="btn-floating red"><i class="material-icons">home</i></a></li>
+      <li><a id="publish3" class="btn-floating yellow darken-1"><i class="material-icons">create</i></a></li>
+      <li><a href="/following/{{ request.user.username }}" class="btn-floating green"><i class="material-icons">people</i></a></li>
+      <li><a id="agregar-amigo2" class="btn-floating blue"><i class="material-icons">add</i></a></li>
+      <li><a href="{% url 'account_logout' %}" class="btn-floating grey darken-3"><i class="material-icons">exit_to_app</i></a></li>
     </ul>
   </div>
   <script src="{{STATIC_URL}}emoji/js/textarea_find_emoji.js" type="text/javascript"></script>
