--- a/skyfolk/templates/account/cf-profile.html
+++ b/skyfolk/templates/account/cf-profile.html
@@ -54,13 +54,13 @@
                     </div>
                   </div>
             </div>
-
+            <div class="row">
 				<div class="backimage-usr">
 					<p>{{ perfil_form.backImage.errors }}</p>
 					<p>Elige una imagen de fondo.</p>
 					<p>{{ perfil_form.backImage }}</p>
 				</div>
-
+            </div>
             <div class="row">
                   <div class="row">
                       <div class="red-text">{{ perfil_form.status.errors }}</div>
