--- a/skyfolk/templates/django_messages/outbox.html
+++ b/skyfolk/templates/django_messages/outbox.html
@@ -7,7 +7,7 @@
 {% block body %}
 <div class="col l8 m12 s12 compose-outbox">
 {% if message_list %}
-<table class="messages">
+<table class="responsive-table messages">
     <thead>
         <tr><th>{% trans "Recipient" %}</th><th>{% trans "Subject" %}</th><th>{% trans "Sent" %}</th><th>{% trans "Action" %}</th></tr>
     </thead>
