--- a/skyfolk/templates/django_messages/trash.html
+++ b/skyfolk/templates/django_messages/trash.html
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="col l8 m12 s12 compose-trash">
 {% if message_list %}
-<table class="messages">
+<table class="responsive-table messages">
     <thead>
         <tr><th>{% trans "Sender" %}</th><th>{% trans "Subject" %}</th><th>{% trans "Date" %}</th><th>{% trans "Action" %}</th></tr>
     </thead>
