--- a/photologue/templates/photologue/photo_detail.html
+++ b/photologue/templates/photologue/photo_detail.html
@@ -15,7 +15,7 @@
 <div class="row">
         <div class="col l12 m12 s12 container-photo">
             <div class="photo">
-                    <div class="col l8 m12 s12 photo-body">
+                    <div class="col l8 m12 s12 photo-body" data-id="{{ object.pk }}">
                      <a href="{{ object.image.url }}">
                          <img src="{{ object.image.url }}" class="thumbnail" alt="{{ object.title }}">
                      </a>
@@ -34,6 +34,19 @@
                                     {% endfor %}
                                 </div>
                         </div>
+                    {% if request.user.pk == object.owner_id %}
+                        <div class="row">
+                            <div class="col s12">
+                                <div class="divider"></div>
+                                <div class="row">
+                                    <div class="author-controls">
+                                        <a class="waves-effect waves-light btn right green">Editar</a>
+                                        <a id="del-photo" class="waves-effect waves-light btn right red">Eliminar</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
                     </div>
                     <div class="gallery-details">
                       {% if object.public_galleries %}
@@ -56,4 +69,5 @@
         </div>
 </div>
 </div>
+    <script async src="{{STATIC_URL}}js/photo_gallery.js" type="text/javascript"></script>
 {% endblock %}
