--- a/skyfolk/static/css/photo_detail.css
+++ b/skyfolk/static/css/photo_detail.css
@@ -67,4 +67,9 @@
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
   margin-bottom: 1em; }
 
+.author-controls {
+  margin-top: 1.3%; }
+  .author-controls > .right {
+    margin-left: 1.3%; }
+
 /*# sourceMappingURL=photo_detail.css.map */
