--- a/skyfolk/static/sass/photo_detail.sass
+++ b/skyfolk/static/sass/photo_detail.sass
@@ -72,3 +72,9 @@ $blueskyfolk: #1e88e5
   border-radius: 0.3rem
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2)
   margin-bottom: 1em
+
+.author-controls
+  margin-top: 1.3%
+  >
+    .right
+      margin-left: 1.3%
