--- a/skyfolk/static/css/photo_detail.css
+++ b/skyfolk/static/css/photo_detail.css
@@ -71,5 +71,7 @@
   margin-top: 1.3%; }
   .author-controls > .right {
     margin-left: 1.3%; }
+  .author-controls > .edit-form {
+    display: none; }
 
 /*# sourceMappingURL=photo_detail.css.map */
