--- a/notifications/templates/notifications/list.html
+++ b/notifications/templates/notifications/list.html
@@ -7,16 +7,20 @@
 {% block content %}
     <div class="container">
     {% if notifications %}
-    <div class="all-notifications-options">
-        <a class="mark-all-as-read-template" href="{% url 'notifications:mark_all_as_read' %}">Todas leídas</a>
-        <a class="mark-all-as-unread-template" href="{% url 'notifications:mark_all_as_unread' %}">Todas sin leer</a>
-        <a class="mark-all-as-deleted-template" href="{% url 'notifications:mark_all_as_deleted' %}">Eliminar todas</a>
-    </div>
+        <div class="row">
+            <div class="col s12 all-notifications-options">
+                <a class="mark-all-as-read-template" href="{% url 'notifications:mark_all_as_read' %}">Todas leídas</a>
+                <a class="mark-all-as-unread-template" href="{% url 'notifications:mark_all_as_unread' %}">Todas sin leer</a>
+                <a class="mark-all-as-deleted-template" href="{% url 'notifications:mark_all_as_deleted' %}">Eliminar todas</a>
+            </div>
+        </div>
     {% endif %}
+    <div class="row">
         <ul class="notifications list-notifications">
           {% for notice in notifications %}
-            <li class="col-sm-12 col-md-12 col-lg-3" data-id="{{ notice.id }}">{% include 'notifications/notice.html' %}</li>
+            <li class="col s12 m12 l3" data-id="{{ notice.id }}">{% include 'notifications/notice.html' %}</li>
           {% endfor %}
         </ul>
+    </div>
     </div>
 {% endblock %}
