--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -104,6 +104,12 @@
             </div>
         </form>
     </div>
+    <!-- PRUEBAS -->
+    <form method="post" action="{% url "photologue:upload-zip" %}" accept-charset="utf-8" enctype="multipart/form-data">{% csrf_token %}
+        {{ form_zip.as_p }}
+    <input type="submit" value="Send message" />
+    </form>
+    <!-- END PRUEBAS -->
 </div> <!-- end wrapper -->
     <script async src="{{STATIC_URL}}js/photo_gallery.js" type="text/javascript"></script>
 {% endblock %}
