+ V3 + Subir .zip con imagenes dentro

--- a/skyfolk/static/sass/gallery.sass
+++ b/skyfolk/static/sass/gallery.sass
@@ -15,6 +15,7 @@ html, body
     width: 55%
     background: #fff
     padding: 1em
+    border-radius: 7px
     box-shadow: $boxshadow
     overflow: hidden
     position: fixed
