--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -46,70 +46,131 @@
             </div> <!-- end container-gallery -->
         </div>
     <div class="upload_form" id="upload_photo">
-        <form action="" method="post" accept-charset="utf-8" enctype="multipart/form-data">{% csrf_token %}
-            <div class="row">
-                <div class="file-field input-field">
-                    {{ form.image.errors }}
-                  <div class="btn blue darken-1 waves-effect waves-light">
-                    <span>Imágen</span>
-                    {{ form.image }}
-                  </div>
-                  <div class="file-path-wrapper">
-                    <input class="file-path validate" type="text">
-                  </div>
+        <div class="col s12">
+          <ul class="tabs">
+            <li class="tab col s3"><a href="#foto" class="active">Foto</a></li>
+            <li class="tab col s3"><a href="#collection">Colección</a></li>
+          </ul>
+        </div>
+        <div id="foto">
+            <form action="{% url "photologue:upload-photo" %}" method="post" accept-charset="utf-8" enctype="multipart/form-data">{% csrf_token %}
+                <div class="row">
+                    <div class="file-field input-field">
+                        {{ form.image.errors }}
+                      <div class="btn blue darken-1 waves-effect waves-light">
+                        <span>Imágen</span>
+                        {{ form.image }}
+                      </div>
+                      <div class="file-path-wrapper">
+                        <input class="file-path validate" type="text">
+                      </div>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                {{ form.crop_from.errors }}
-                <div class="input-field col s12">
-                    {{ form.crop_from }}
-                    <label>{% trans "crop from" %}</label>
+                <div class="row">
+                    {{ form.crop_from.errors }}
+                    <div class="input-field col s12">
+                        {{ form.crop_from }}
+                        <label>{% trans "crop from" %}</label>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                {{ form.effect.errors }}
-                <div class="input-field col s12">
-                    {{ form.effect }}
-                    <label>{% trans "photo effects" %}</label>
+                <div class="row">
+                    {{ form.effect.errors }}
+                    <div class="input-field col s12">
+                        {{ form.effect }}
+                        <label>{% trans "photo effects" %}</label>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                {{ form.title.errors }}
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">title</i>
-                    {{ form.title }}
-                    <label for="id_title">{% trans "title" %}</label>
+                <div class="row">
+                    {{ form.title.errors }}
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">title</i>
+                        {{ form.title }}
+                        <label for="id_title">{% trans "title" %}</label>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                {{ form.caption.errors }}
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">closed_caption</i>
-                    {{ form.caption }}
-                    <label for="id_caption">{% trans "caption" %}</label>
+                <div class="row">
+                    {{ form.caption.errors }}
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">closed_caption</i>
+                        {{ form.caption }}
+                        <label for="id_caption">{% trans "caption" %}</label>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                {{ form.tags.errors }}
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">label</i>
-                    {{ form.tags }}
-                    <label for="id_caption">{{ form.tags.help_text }}</label>
+                <div class="row">
+                    {{ form.tags.errors }}
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">label</i>
+                        {{ form.tags }}
+                        <label for="id_tags">{{ form.tags.help_text }}</label>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
+                <div class="row">
+                    <button class="waves-effect waves-light btn blue darken-1 right" type="submit" >Subir
+                    <i class="material-icons right">file_upload</i>
+                    </button>
+                </div>
+            </form>
+        </div>
+        <div id="collection">
+            <form method="post" action="{% url "photologue:upload-zip" %}" accept-charset="utf-8" enctype="multipart/form-data">{% csrf_token %}
+                <div class="row">
+                    <div class="file-field input-field">
+                        {{ form_zip.zip_file.errors }}
+                      <div class="btn blue darken-1 waves-effect waves-light">
+                        <span>{% trans "Upload a zip archive" %}</span>
+                        {{ form_zip.zip_file }}
+                      </div>
+                      <div class="file-path-wrapper">
+                        <input class="file-path validate" type="text">
+                      </div>
+                    </div>
+                </div>
+                <div class="row">
+                    {{ form_zip.title.errors }}
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">title</i>
+                        {{ form_zip.title }}
+                        <label for="id_title">{% trans "title" %}</label>
+                    </div>
+                </div>
+                <div class="row">
+                    {{ form_zip.caption.errors }}
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">closed_caption</i>
+                        {{ form_zip.caption }}
+                        <label for="id_caption">{% trans "caption" %}</label>
+                    </div>
+                </div>
+                <div class="row">
+                    {{ form_zip.description.errors }}
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">description</i>
+                        {{ form_zip.description }}
+                        <label for="id_caption">{% trans "description" %}</label>
+                    </div>
+                </div>
+                <div class="row">
+                    {{ form_zip.is_public.errors }}
+                    <p>
+                        {{ form_zip.is_public }}
+                        <label for="id_is_public">{% trans "Is public" %}</label>
+                        <i>{{ form_zip.is_public.help_text }}</i>
+                    </p>
+                </div>
+                <div class="row">
+                    {{ form_zip.tags.errors }}
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">label</i>
+                        {{ form_zip.tags }}
+                        <label for="id_tags">{{ form_zip.tags.help_text }}</label>
+                    </div>
+                </div>
                 <button class="waves-effect waves-light btn blue darken-1 right" type="submit" >Subir
-                <i class="material-icons right">file_upload</i>
+                    <i class="material-icons right">file_upload</i>
                 </button>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
-    <!-- PRUEBAS -->
-    <form method="post" action="{% url "photologue:upload-zip" %}" accept-charset="utf-8" enctype="multipart/form-data">{% csrf_token %}
-        {{ form_zip.as_p }}
-    <input type="submit" value="Send message" />
-    </form>
-    <!-- END PRUEBAS -->
 </div> <!-- end wrapper -->
     <script async src="{{STATIC_URL}}js/photo_gallery.js" type="text/javascript"></script>
 {% endblock %}
