--- a/skyfolk/static/css/gallery.css
+++ b/skyfolk/static/css/gallery.css
@@ -7,6 +7,7 @@ html, body {
   width: 55%;
   background: #fff;
   padding: 1em;
+  border-radius: 7px;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
   overflow: hidden;
   position: fixed;
