+ V3 + Buscar imágenes en el search

--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -2,7 +2,7 @@
 {% load avatar_tags %}
 {% load i18n %}
 {% load humanize %}
-{% block title %} <title>Galería de {{ user_gallery }}</title> {% endblock %}
+{% block title %} <title>Skyfolk - Media</title> {% endblock %}
 
 {% block include_files %}
     <link rel="stylesheet" href="{{STATIC_URL}}css/gallery.css" onload="if(media!='all')media='all'"> <!-- Estilos para la galeria de fotos -->
