--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -4,11 +4,14 @@
 {% endcomment %}
 {% load app_filters %}
 {% load avatar_tags %}
+{% load humanize %}
 {% block title %} <title>Búsqueda en Skyfolk.</title> {% endblock %}
-
+{% block include_files %}
+<link rel="stylesheet" href="{{STATIC_URL}}css/gallery.css" onload="if(media!='all')media='all'"> <!-- Estilos para la galeria de fotos -->
+{% endblock %}
 {% block content %}
 <div class="container">
-      {% if resultSearch|length == 0 and resultMessages|length == 0 %}
+      {% if resultSearch|length == 0 and resultMessages|length == 0 and result_media|length == 0 %}
           <div class="row">
               <div class="col s12">
                    <div class="noelements-search" id="search-noelements">
@@ -45,6 +48,7 @@
                 </ul>
               </div>
           </div>
+    {% endif %}
           <div class="row">
           {% if resultSearch|length != 0 %}
           <h2 class="account-search">Cuentas</h2>
@@ -76,7 +80,6 @@
         {% endfor %}
             {% endif %}
            </div>
-      {% endif %}
     <div class="row">
         {% if resultMessages|length != 0 %}
             <h2 class="messages-search">Publicaciones</h2>
@@ -111,6 +114,43 @@
             {% endfor %}
         {% endif %}
     </div>
+        <div class="row">
+        {% if result_media|length != 0 %}
+            <h2 class="messages-search">Media</h2>
+            {% for photo in result_media %}
+                {% if user.username|check_follow:photo.owner.username and not user.username|check_blocked:photo.owner.username %} {% comment 'Check privacity' %} Comprobamos la privacidad del autor del mensaje {% endcomment %}
+                        <div class="col l2 m12 s12 image-div">
+                            <div class="container-image">
+                                <div class="principal-content">
+                                    {% if photo.tags.all %}
+                                        <div class="tags-content">
+                                        <form method="post" action="{% url "photologue:collection-list" photo.pk photo.owner %}">{% csrf_token %}
+                                            {% for tag in photo.tags.all %}
+                                                <blockquote>{{ tag.name }}</blockquote>
+                                            {% endfor %}
+                                        <input data-id="{{ photo.pk }}" type="submit" hidden>
+                                        </form>
+                                        </div>
+                                    {% endif %}
+                                    <img src="{{ photo.image.url }}" alt="{{ photo.title }}" title="{{ photo.title }}" onclick="location.href='{{ photo.get_absolute_url }}'">
+                                </div>
+                                <div class="col s12 legend-content">
+                                    <div class="legend-user-image">
+                                        {% avatar photo.owner.username %}
+                                    </div>
+                                    <div class="col l8 m8 s8 legend-user-data">
+                                        <a href="/profile/{{ photo.owner.username }}">@{{ photo.owner.username }}</a>
+                                        <i class="photo-title truncate">{{ photo.title }}</i>
+                                        <i class="truncate photo-date"><i class="fa fa-clock-o" aria-hidden="true"></i> {{ photo.date_added|naturaltime }}</i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
+            {% endfor %}
+        {% endif %}
+    </div>
     <script async src="{{STATIC_URL}}js/search.js"></script>
+    <script async src="{{STATIC_URL}}js/photo_gallery.js" type="text/javascript"></script>
 {% endblock %}
 </div>
