+ V3 + Paginación en seguidores y seguidos + Única template para seguidores y seguidos, se diferencia del contenido

--- a/skyfolk/static/sass/amigos.sass
+++ b/skyfolk/static/sass/amigos.sass
@@ -23,6 +23,7 @@ html, body
   margin-top: 1.3%
 .container .personal-card
   height: 300px
+  margin-top: 5%
   box-shadow: 0 1px 5px $transparentgraycolor
 
 
