--- a/skyfolk/static/css/amigos.css
+++ b/skyfolk/static/css/amigos.css
@@ -17,6 +17,7 @@ html, body {
 
 .container .personal-card {
   height: 300px;
+  margin-top: 5%;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4); }
 
 .container .header {
