+ V3 + Añadiendo en search nueva vista para publicaciones + Añadido Next [con foto] y previous [con foto] en los detalles de una imagen => Así se puede ver que foto es la siguiente y cual la anterior

--- a/photologue/templates/photologue/photo_detail.html
+++ b/photologue/templates/photologue/photo_detail.html
@@ -82,10 +82,12 @@
                     {% endif %}
                         <div class="row">
                             {% if next %}
-                                <a href="{{ next.get_absolute_url }}" class="waves-effect waves-light btn">Next</a>
+                            <a href="{{ next.get_absolute_url }}" class="waves-effect waves-light btn">Next</a>
+                                <img src="{{next.get_thumbnail_url}}">
                             {% endif %}
                             {% if previous %}
                                 <a href="{{ previous.get_absolute_url }}" class="waves-effect waves-light btn">previous</a>
+                                <img src="{{ previous.get_thumbnail_url }}">
                             {% endif %}
                         </div>
                     </div>
