--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -7,7 +7,46 @@
 {% load humanize %}
 {% block title %} <title>Búsqueda en Skyfolk.</title> {% endblock %}
 {% block include_files %}
-<link rel="stylesheet" href="{{STATIC_URL}}css/gallery.css" onload="if(media!='all')media='all'"> <!-- Estilos para la galeria de fotos -->
+    <link rel="stylesheet" href="{{STATIC_URL}}css/gallery.css" onload="if(media!='all')media='all'"> <!-- Estilos para la galeria de fotos -->
+    <style>
+.notice-item {
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
+    border-radius: 7px;
+    margin-top: 5%;
+    overflow: hidden;
+}
+.notice-item .img {
+    border-radius: 7px;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
+}
+.notice-item .img img {
+    width: 100%;
+    height: 100%;
+}
+.notice-item .contenido {
+    margin-top: 2.5%;
+    margin-bottom: 1.5%;
+    word-wrap: break-word;
+    line-height: 1.5rem;
+}
+.notice-item .author {
+    display: block;
+    margin-top: 1.25%;
+}
+.notice-item .author a {
+    text-decoration: none;
+    color: #1e88e5;
+    font-weight: 600;
+    margin-right: 2%;
+}
+.notice-item .author i {
+    color: gray;
+}
+.notice-item  .pub-date {
+    margin-top: 2%;
+    display: block;
+}
+    </style>
 {% endblock %}
 {% block content %}
 <div class="container">
@@ -82,35 +121,29 @@
     <div class="row">
         {% if resultMessages|length != 0 %}
             <h2 class="messages-search">Publicaciones</h2>
+            <div class="row">
             {% for pub in resultMessages %}
                 {% if user.username|check_follow:pub.author.username and not user.username|check_blocked:pub.author.username %} {% comment 'Check privacity' %} Comprobamos la privacidad del autor del mensaje {% endcomment %}
-                    <div class="col l3 m5 s12 pub-search">
-                        <div class="personal-card">
-                            <div class="col l12">
-                                <div class="header">
-                                    {% if pub.author.profile.backImage %}
-                                       <img class="back-profile-user" src="{{ pub.author.profile.backImage.url }}">
-                                       {% else %}
-                                       <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
-                                    {% endif %}
-                                    <div class="bg-user">
-                                        <div onclick="location.href='/profile/{{ pub.author.username }}'" class="profile-user-bg">{% avatar pub.author %}</div>
-                                    </div>
-                                </div>
+                    <div class="col l3 m6 s12">
+                        <div class="notice-item">
+                            <div class="row">
+                            <div class="col s3 img">
+                                {% avatar pub.author.username %}
                             </div>
-                            <div class="col l12">
-                                <div class="col l12 m12 s12 pub-author">
-                                    <a href="/profile/{{ pub.author.username }}">@{{ pub.author.username }}</a>
-                                    <i> ({{ pub.author.first_name}} {{ pub.author.last_name }})</i>
-                                  </div>
-                                <div class="col l12 m12 s12 comm">
-                                        <blockquote class="pub-content">{{ pub.content|safe }}</blockquote>
-                                </div>
-                            </div>
+                         <div class="col l8 m7 s8 author">
+                            <a href="/profile/{{ pub.author.username }}">@{{ pub.author.username }}</a>
+                            <i>{{ pub.author.first_name }} {{ pub.author.last_name }}</i>
+                            <i class="pub-date">{{ pub.created|naturaltime }}</i>
+                         </div>
+                        <div class="col l9 m9 s9 contenido">
+                            <p class="flow-text">{{pub.content|safe}}</p>
+                        </div>
+                        </div>
                         </div>
                     </div>
                     {% endif %}
             {% endfor %}
+            </div>
         {% endif %}
     </div>
         <div class="row">
